--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile 'org.freemarker:freemarker:2.3.23'
     compile 'com.sparkjava:spark-debug-tools:0.5'
     compile 'com.google.code.gson:gson:2.6.2'
+    // https://mvnrepository.com/artifact/com.j2html/j2html
+    compile group: 'com.j2html', name: 'j2html', version: '0.7'
+
 }
